# lane_detection

./: .gitignore  .pypirc  LICENSE  README.md  pyproject.toml  requirements.txt
enet_seifeddine_dridi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lanenet/: model.py
lanenet/enet/: __init__.py  config.py  main.py  model.py  model_utils.py
lanenet/enet/dataset/: loader.py
notebook/: Enet.ipynb  jupyter.ipynb
scripts/: test_model.py
src/enet/: main.py  model.py
src/enet/dataset/: loader.py  model.py
test/: __main__.py  test_model.py
