[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enet_seifeddine_dridi"
version = "0.0.12"
authors = [
  { name="Seifeddine Dridi", email="seifeddine.dridi89@gmail.com" },
]
description = "An implementation of the Enet architecture using PyTorch"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["lanenet"]